[Feature #164489789] pagination support for article ratings
