# controllers/article.js
@@ -38,8 +38,8 @@ class Article {
     const {
       title, body, taglist, description,
     } = req.body;
-    const image = (req.file ? req.file.url : 'null');
 
+    const image = (req.file ? req.file.url : 'null');
     if (!title) {
       return res.status(400).json({ error: 'title can not be null' });
     }
@@ -697,7 +697,6 @@ class Article {
         error: 'Article can not be found.'
       });
     }
-
     const allArticles = await ratingModel.allRatings(UserModel, ArticleModel, slug);
     const { rows } = allArticles;
     if (rows.length === 0) {
@@ -719,6 +718,38 @@ class Article {
       },
       averageRating: objKey(Math.ceil(AvgRate))
     });
+  }
+
+  /**
+  * @author Innocent Nkunzi
+  * @param {*} req
+  * @param {*} res
+  * @returns {object} it returns an object of articles
+  */
+  static async articleRatingPagination(req, res) {
+    const pageNumber = parseInt(req.query.page, 10);
+    const limitRatings = parseInt(req.query.limit, 10);
+
+    if (pageNumber <= 0) {
+      return res.status(403).json({
+        error: 'Invalid page number'
+      });
+    }
+    if (limitRatings <= 0) {
+      return res.status(403).json({
+        error: 'Invalid limit'
+      });
+    }
+    const offset = limitRatings * (pageNumber - 1);
+    const listOfRatings = await ratingModel.paginateArticleRatings(limitRatings, offset);
+    if (listOfRatings.length) {
+      res.status(200).json({
+        articles: listOfRatings,
+        ratingCounts: listOfRatings.length
+      });
+    } else {
+      res.status(404).json({ error: 'No article found' });
+    }
   }
 }
 export default Article;
